--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "lint:fix": "yarn lint --fix",
     "type-check": "tsc"
   },
-  "name": "react-paginator",
+  "name": "chakra-paginator",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.3",
     "react": "^16.13.1",
