--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx",
     "prepublish": "yarn build",
     "lint:fix": "yarn lint --fix",
-    "publish": "np",
+    "upload": "yarn build && np",
     "preview": "np preview",
     "type-check": "tsc"
   },
