--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
@@ -48,10 +52,7 @@
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.1",
     "rollup": "^2.27.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "~4.0.2"
   },
   "husky": {
