--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "email": "nicolas.accetta@gmail.com",
     "url": "https://github.com/niconiahi/"
   },
+  "dependencies": {
+    "lodash.union": "^4.6.0"
+  },
   "peerDependencies": {
     "@chakra-ui/react": "^1.1.2",
     "@emotion/react": "^11.1.4",
@@ -40,13 +43,13 @@
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.2.1",
     "@chakra-ui/react": "^1.1.2",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "framer-motion": "^3.1.4",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/lodash.union": "^4.6.6",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
@@ -55,11 +58,13 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "framer-motion": "^3.1.4",
     "husky": "^4.3.0",
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
     "react-scripts": "3.4.3",
     "rollup": "^2.27.1",
     "rollup-plugin-peer-deps-external": "^2.2.3",
