--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "type": "git",
     "url": "git@github.com:niconiahi/chakra-paginator.git"
   },
-  "version": "v0.6.1",
+  "version": "0.6.2",
   "author": {
     "name": "Nicolas Accetta",
     "email": "nicolas.accetta@gmail.com",
